--- a/Final_Project.ipynb
+++ b/Final_Project.ipynb
@@ -107,7 +107,7 @@
     "import json\n",
     "import numpy as np\n",
     "df_uv = pd.read_csv('USvideos.csv')\n",
-    "df_uv[['category_id']]"
+    "df_uv[['category_id']]\n"
    ]
   },
   {
@@ -146,20 +146,20 @@
     "# 储备式子\n",
     "uv_list = []\n",
     "i = 0\n",
-    "f = open('US_category_id.json','r')\n",
+    "f = open('US_category_id.json', 'r')\n",
     "a = json.load(f)\n",
     "uv_id = df_uv['category_id'].value_counts().index\n",
     "for id in uv_id:\n",
     "    i = 0\n",
-    "    while i<= 31: \n",
+    "    while i <= 31:\n",
     "        if int(a['items'][i]['id']) == id:\n",
     "            uv_list.append(a['items'][i]['snippet']['title'])\n",
-    "        else: \n",
+    "        else:\n",
     "            pass\n",
-    "        i += 1  \n",
+    "        i += 1\n",
     "uv_list\n",
-    "s = pd.Series(uv_list,index=df_uv['category_id'].value_counts().index)\n",
-    "s"
+    "s = pd.Series(uv_list, index=df_uv['category_id'].value_counts().index)\n",
+    "s\n"
    ]
   },
   {
@@ -185,9 +185,9 @@
     "for id in uv_id:\n",
     "    uv_idnumber.append(df_uv['category_id'].value_counts()[id])\n",
     "uv_idnumber\n",
-    "fig, ax = plt.subplots( figsize=(15, 15))\n",
-    "ax.plot(uv_list,uv_idnumber)\n",
-    "plt.xticks(rotation =60);\n"
+    "fig, ax = plt.subplots(figsize=(15, 15))\n",
+    "ax.plot(uv_list, uv_idnumber)\n",
+    "plt.xticks(rotation=60)\n"
    ]
   },
   {
@@ -211,7 +211,7 @@
     "m = []\n",
     "for i in a['items']:\n",
     "    m.append(i)\n",
-    "len(m)"
+    "len(m)\n"
    ]
   },
   {
@@ -234,8 +234,7 @@
     "# 点赞柱状图 -- 引出对作品质量的分析\n",
     "from statistics import median\n",
     "thumb_rate = df_uv['likes']/df_uv['views']\n",
-    "thumb_rate.mean()\n",
-    "\n"
+    "thumb_rate.mean()\n"
    ]
   },
   {
@@ -244,7 +243,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_uv['thumb_rate'] = thumb_rate"
+    "df_uv['thumb_rate'] = thumb_rate\n"
    ]
   },
   {
@@ -277,21 +276,21 @@
     "uv_thumb_list = []\n",
     "for id in df_uvthumbrate.index:\n",
     "    i = 0\n",
-    "    while i<= 31: \n",
+    "    while i <= 31:\n",
     "        if int(a['items'][i]['id']) == id:\n",
     "            uv_thumb_list.append(a['items'][i]['snippet']['title'])\n",
-    "        else: \n",
+    "        else:\n",
     "            pass\n",
-    "        i += 1  \n",
+    "        i += 1\n",
     "uv_thumb_number = []\n",
     "for id in df_uvthumbrate.index:\n",
     "    uv_thumb_number.append(df_uvthumbrate[id])\n",
     "uv_thumb_number2 = []\n",
     "for id in uv_id:\n",
     "    uv_thumb_number2.append(df_uvthumbrate[id])\n",
-    "fig, ax = plt.subplots( figsize=(10, 5))\n",
-    "ax.plot(uv_thumb_list,uv_thumb_number)\n",
-    "plt.xticks(rotation =60);"
+    "fig, ax = plt.subplots(figsize=(10, 5))\n",
+    "ax.plot(uv_thumb_list, uv_thumb_number)\n",
+    "plt.xticks(rotation=60)\n"
    ]
   },
   {
@@ -316,10 +315,10 @@
     "for id in uv_id:\n",
     "    uv_idnumber.append(df_uv['category_id'].value_counts()[id])\n",
     "uv_idnumber\n",
-    "fig, ax = plt.subplots( figsize=(15, 15))\n",
-    "ax.plot(uv_list,uv_idnumber)\n",
+    "fig, ax = plt.subplots(figsize=(15, 15))\n",
+    "ax.plot(uv_list, uv_idnumber)\n",
     "\n",
-    "plt.xticks(rotation =60);\n"
+    "plt.xticks(rotation=60)\n"
    ]
   },
   {
@@ -342,8 +341,8 @@
     "# 点赞图 -- 以种类为基辅，用来与视频类别选择进行对比（储备图）\n",
     "df_uvthumbrate[10]\n",
     "fig, ax = plt.subplots(figsize=(15, 15))\n",
-    "ax.plot(uv_list,uv_thumb_number2)\n",
-    "plt.xticks(rotation=60);"
+    "ax.plot(uv_list, uv_thumb_number2)\n",
+    "plt.xticks(rotation=60)\n"
    ]
   },
   {
@@ -367,7 +366,7 @@
     "data1 = df_uv.comment_count\n",
     "data2 = df_uv.likes\n",
     "\n",
-    "fig, ax1 = plt.subplots(figsize = (15, 15))\n",
+    "fig, ax1 = plt.subplots(figsize=(15, 15))\n",
     "\n",
     "color = 'tab:red'\n",
     "ax1.set_xlabel('views')\n",
@@ -381,7 +380,7 @@
     "ax2.scatter(df_uv.views, data2, color=color)\n",
     "ax2.tick_params(axis='y', labelcolor=color)\n",
     "\n",
-    "fig.tight_layout();"
+    "fig.tight_layout()\n"
    ]
   },
   {
@@ -414,40 +413,43 @@
     "# high >= 0.05\n",
     "# 0.03 =< mideum <0.05\n",
     "# low < 0.03\n",
-    "high = df_uv[thumb_rate>=0.05]\n",
-    "low = df_uv[thumb_rate<0.01]\n",
-    "median = df_uv[(thumb_rate<0.05)&(thumb_rate>=0.01)]\n",
+    "high = df_uv[thumb_rate >= 0.05]\n",
+    "low = df_uv[thumb_rate < 0.01]\n",
+    "median = df_uv[(thumb_rate < 0.05) & (thumb_rate >= 0.01)]\n",
     "len(median)\n",
-    "sum = len(df_uv) \n",
+    "sum = len(df_uv)\n",
     "p_h = len(high)/sum\n",
     "p_m = len(median)/sum\n",
     "p_l = len(low)/sum\n",
     "x = ['high(>0.5)', 'median(>0.1,<0.5)', 'low(<0.1)']\n",
-    "y = [p_h,p_m,p_l]\n",
-    " \n",
+    "y = [p_h, p_m, p_l]\n",
+    "\n",
     "# fig = plt.figure()\n",
     "# plt.pie(y,labels=x,autopct='%1.2f%%') #画饼图（数据，数据对应的标签，百分数保留两位小数点）\n",
     "# plt.title(\"Pie chart\")\n",
     "\n",
     "\n",
-    "def draw_pie(labels,quants):\n",
+    "def draw_pie(labels, quants):\n",
     "    # make a square figure\n",
-    "    plt.figure(1, figsize=(6,6))\n",
+    "    plt.figure(1, figsize=(6, 6))\n",
     "    # For China, make the piece explode a bit\n",
-    "    expl = [0.1,0.1,0.1]   #第二块即China离开圆心0.1\n",
+    "    expl = [0.1, 0.1, 0.1]  # 第二块即China离开圆心0.1\n",
     "    # Colors used. Recycle if not enough.\n",
-    "    colors  = [\"blue\",\"red\",\"coral\"]  #设置颜色（循环显示）\n",
+    "    colors = [\"blue\", \"red\", \"coral\"]  # 设置颜色（循环显示）\n",
     "    # Pie Plot\n",
     "    # autopct: format of \"percent\" string;百分数格式\n",
-    "    plt.pie(quants, explode=expl, colors=colors, labels=labels, autopct='%1.1f%%',pctdistance=0.8, shadow=True)\n",
-    "    plt.title('\\nThumb Rate\\n', bbox={'facecolor':'0.8', 'pad':5})\n",
+    "    plt.pie(quants, explode=expl, colors=colors, labels=labels,\n",
+    "            autopct='%1.1f%%', pctdistance=0.8, shadow=True)\n",
+    "    plt.title('\\nThumb Rate\\n', bbox={'facecolor': '0.8', 'pad': 5})\n",
     "    plt.show()\n",
     "    plt.savefig(\"pie.jpg\")\n",
     "    plt.close()\n",
+    "\n",
+    "\n",
     "quants = y\n",
     "labels = x\n",
     "\n",
-    "draw_pie(labels,quants)"
+    "draw_pie(labels, quants)\n"
    ]
   },
   {
@@ -472,14 +474,14 @@
     "data1 = uv_thumb_number2\n",
     "data2 = uv_idnumber\n",
     "\n",
-    "fig, ax1 = plt.subplots(figsize = (15, 15))\n",
+    "fig, ax1 = plt.subplots(figsize=(15, 15))\n",
     "\n",
     "color = 'tab:red'\n",
     "ax1.set_xlabel('')\n",
     "ax1.set_ylabel('thumb_rate', color=color)\n",
     "ax1.plot(uv_list, data1, color=color)\n",
     "ax1.tick_params(axis='y', labelcolor=color)\n",
-    "plt.xticks(rotation = 60)\n",
+    "plt.xticks(rotation=60)\n",
     "ax2 = ax1.twinx()  # 创建共用x轴的第二个y轴\n",
     "\n",
     "color = 'tab:blue'\n",
@@ -487,8 +489,7 @@
     "ax2.plot(uv_list, data2, color=color)\n",
     "ax2.tick_params(axis='y', labelcolor=color)\n",
     "\n",
-    "fig.tight_layout();\n",
-    "\n"
+    "fig.tight_layout()\n"
    ]
   },
   {
@@ -508,16 +509,16 @@
     }
    ],
    "source": [
-    "#未排序（储备图）\n",
+    "# 未排序（储备图）\n",
     "\n",
-    "fig, ax1 = plt.subplots(figsize = (15, 15))\n",
-    "data3 = np.multiply(np.array(data1),np.array(data2))\n",
+    "fig, ax1 = plt.subplots(figsize=(15, 15))\n",
+    "data3 = np.multiply(np.array(data1), np.array(data2))\n",
     "color = 'tab:red'\n",
     "ax1.set_xlabel('')\n",
     "ax1.set_ylabel('thumb_rate', color=color)\n",
     "ax1.plot(uv_list, data3, color=color)\n",
     "ax1.tick_params(axis='y', labelcolor=color)\n",
-    "plt.xticks(rotation = 60);"
+    "plt.xticks(rotation=60)\n"
    ]
   },
   {
@@ -539,15 +540,15 @@
    "source": [
     "# 加权图 （用以商业结论）\n",
     "\n",
-    "s = pd.Series(data3,index=uv_list)\n",
+    "s = pd.Series(data3, index=uv_list)\n",
     "s_sort = s.sort_values(ascending=False)\n",
-    "fig, ax1 = plt.subplots(figsize = (15, 15))\n",
+    "fig, ax1 = plt.subplots(figsize=(15, 15))\n",
     "color = 'tab:red'\n",
     "ax1.set_xlabel('Series')\n",
     "ax1.set_ylabel('Weighted proportion', color=color)\n",
     "ax1.plot(s_sort.index, s[s_sort.index], color=color)\n",
     "ax1.tick_params(axis='y', labelcolor=color)\n",
-    "plt.xticks(rotation = 60);"
+    "plt.xticks(rotation=60)\n"
    ]
   },
   {
@@ -583,23 +584,23 @@
     "df = pd.read_csv('USvideos.csv')\n",
     "uv_list = []\n",
     "i = 0\n",
-    "f = open('US_category_id.json','r')\n",
+    "f = open('US_category_id.json', 'r')\n",
     "a = json.load(f)\n",
     "uv_id = df['category_id'].value_counts().index\n",
     "for id in uv_id:\n",
     "    i = 0\n",
-    "    while i<= 31: \n",
+    "    while i <= 31:\n",
     "        if int(a['items'][i]['id']) == id:\n",
     "            uv_list.append(a['items'][i]['snippet']['title'])\n",
-    "        else: \n",
+    "        else:\n",
     "            pass\n",
-    "        i += 1  \n",
+    "        i += 1\n",
     "id = {\n",
     "    'id': uv_id,\n",
-    "    'Corresponding':uv_list,\n",
+    "    'Corresponding': uv_list,\n",
     "}\n",
     "dv_uv = pd.DataFrame(id)\n",
-    "print(dv_uv)"
+    "print(dv_uv)\n"
    ]
   },
   {
@@ -623,15 +624,8 @@
     }
    ],
    "source": [
-    "s_sort[s[s_sort.index]>=150]"
+    "s_sort[s[s_sort.index] >= 150]\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
